# dseq0.1

./: .gitignore  README.md  datasets  models  pyproject.toml  tf_cell_counts_data.csv
dataload/: download_evo.py  download_pdb.py  download_se.py  get_emb.py  get_pdbkey.py  get_seq.py  get_uniprot_seq.py  preprocess_data.py  setup.py  view_andata.py  view_tfdata.py
model/: data_loader.py  inference.py  inference_ai.py  joint_backbone.py  losses.py  metric.py  metrics.py  test_toy.py  tokenize_seq.py  train.py  train_ai.py  utils.py
scripts/: create_demo.py  test_tf.py  view_data.py
trait_pred/: csv_img.py  get_programs.py
