[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dseq"
version = "0.1.0"
description = "Data loading and sequence fetching utilities for dseq"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "requests",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
include = ["dataload*"]



